--- a/calendar.css
+++ b/calendar.css
@@ -14,8 +14,11 @@ li {
     list-style: none;
 }
 
+h2 {
+    margin: 0;
+}
+
 .calendar {
-    width: 600px;
     border: 2px solid gray;
     position: absolute;
     top: 50%;
@@ -29,7 +32,7 @@ li {
 
 .calendar-wrapper > .calendar-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .calendar-wrapper > .calendar-header button {
@@ -52,11 +55,27 @@ ul.calendar-days {
     font-size: 18px;
     font-weight: 700;
     display: flex;
-    justify-content: space-between;
     vertical-align: middle;
-    letter-spacing: -0.3px;
+    text-align: center;
+}
+
+ul.calendar-days li {
+    width: 70px;
+} 
+
+.calendarDates {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+    font-size: 24px;
+    cursor: pointer;
+}
+.calendarDates .date:hover{
+    width: 70px;
+    background-color: #d5d5d5;
 }
 
 ul.calendar-days li:first-child , ul.calendar-days li:last-child {
     color: orange;
 }
+
