--- a/calendar.css
+++ b/calendar.css
@@ -19,15 +19,11 @@ h2 {
 }
 
 .calendar {
-    border: 2px solid gray;
+    height: 273px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-}
-
-.calendar-wrapper {
-    padding: 20px 50px;
 }
 
 .calendar-wrapper > .calendar-header {
